@@ -1,4 +1,10 @@
 XX/XX/XX (TRUST)  Convergence : Use the true residual (instead of preconditioned one) for convergence test with PETSc GMRES solver (may be necessary to lower seuil option to have same results than 1.8.3)
+10/09/21 (TRUST)  Keyword     : Add pression option to Navier Stokes initial conditions to initialize velocity and pressure field
+17/08/21 (TRUST)  Portability : ARM partition (a64fx processors) of Irene Joliot cluster supported
+17/08/21 (TRUST)  Performance : Arrays obtained from octree algorithm are cached. Useful for advanced fields computation needing interpolations each time-step 
+17/08/21 (TRUST)  Bug fixed   : Regression since 1.8.3 fixed (malformed .dt_ev file with missing columns for coupled problems)
+20/07/21 (TRUST)  Performance : Output files (.out) are opened/closed at the first/last print and not at each print as before
+12/07/21 (TRUST)  Bug fix     : Source_generique source term couldn't be used for PolyMAC discretization
 --------------------------------------------------------------------------------------------------
 Release notes version 1.8.4_beta : Enhancements, modifications and corrected bugs since version 1.8.3 :
 --------------------------------------------------------------------------------------------------
